--- a/EasyJob/config.json
+++ b/EasyJob/config.json
@@ -28,6 +28,7 @@
     "hide_menu_item_settings_configuration": false,
     "hide_menu_item_help": false,
     "hide_menu_item_help_troubleshooting": false,
+    "hide_menu_item_help_colortags": false,
     "hide_menu_item_help_about": false
   },
   "tabs": [
